covid19: moving up the sparkline

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -113,27 +113,27 @@
                 
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <colgroup>
-                      <col span="1" >
-                      <col span="1" >
                       <col span="1">
-                      <col span="1">
+                      <col span="1" style="width: 15%;">
+                      <col span="1" style="width: 10%;">
+                      <col span="1" style="width: 10%;">
                       <col span="1" style="width: 10%;">
                   </colgroup>
 
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" style="text-align: left; font-size: small;">Region</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Test Pos% Trend</th>
                             <th scope="col" style="text-align: right; font-size: small;">Test Positivity</th>
                             <th scope="col" style="text-align: right; font-size: small;">Total Tests</th>
                             <th scope="col" style="text-align: right; font-size: small;">Positive Tests</th>
-                            <th scope="col" style="text-align: left; font-size: small;">Test Pos% Trend</th>
                         </tr>
                         <tr>
                           <th style="vertical-align: text-top; background-color: black; text-align: left; font-weight: medium; font-size: small;" id="india">India</th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: left; font-size: small;" id="ind-trend"></th>
                           <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-tpr"></th>
                           <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-tests">n/a</th>
                           <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-postests">n/a</th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: left; font-size: small;" id="ind-trend"></th>
                         </tr>
                     </thead>
                     <tbody id="statesrows" style="font-size: small;"></tbody>
