--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -225,6 +225,7 @@
         
     </div>
 
+    <script src="js/indiamap.js"></script>
     <script src="js/basics.js"></script>
     <script src="index.js"></script>
 </body>
