covid19: regular text

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -129,14 +129,14 @@
                             <th scope="col" style="text-align: right; font-size: small;">Positive Tests</th>
                         </tr>
                         <tr>
-                          <th style="vertical-align: text-top; background-color: black; text-align: left; font-weight: medium; font-size: small;" id="india">India</th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: left; font-size: small;" id="ind-trend"></th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-tpr"></th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-tests">n/a</th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: right; font-weight: medium; font-size: small;" id="ind-postests">n/a</th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: left;" id="india">India</th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: left;" id="ind-trend"></th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-tpr"></th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-tests">n/a</th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-postests">n/a</th>
                         </tr>
                     </thead>
-                    <tbody id="statesrows" style="font-size: small;"></tbody>
+                    <tbody id="statesrows"></tbody>
                 </table>
             </div>
             <div class="col-md-6" >
