--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -114,26 +114,26 @@
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <colgroup>
                       <col span="1">
-                      <col span="1" style="width: 15%;">
-                      <col span="1" style="width: 10%;">
-                      <col span="1" style="width: 10%;">
-                      <col span="1" style="width: 10%;">
+                      <col span="1" style="width: 40%;">
+                      <col span="1" style="width: 20%;">
+                      <!-- <col span="1" style="width: 10%;"> -->
+                      <!-- <col span="1" style="width: 10%;"> -->
                   </colgroup>
 
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" style="text-align: left; font-size: small;">Region</th>
-                            <th scope="col" style="text-align: left; font-size: small;">Test Pos% Trend</th>
                             <th scope="col" style="text-align: right; font-size: small;">Test Positivity</th>
-                            <th scope="col" style="text-align: right; font-size: small;">Total Tests</th>
-                            <th scope="col" style="text-align: right; font-size: small;">Positive Tests</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Trend</th>
+                            <!-- <th scope="col" style="text-align: right; font-size: small;">Total Tests</th> -->
+                            <!-- <th scope="col" style="text-align: right; font-size: small;">Positive Tests</th> -->
                         </tr>
                         <tr>
                           <th style="vertical-align: text-top; background-color: black; text-align: left;" id="india">India</th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: left;" id="ind-trend"></th>
                           <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-tpr"></th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-tests">n/a</th>
-                          <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-postests">n/a</th>
+                          <th style="vertical-align: text-top; background-color: black; text-align: left;" id="ind-trend"></th>
+                          <!-- <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-tests">n/a</th> -->
+                          <!-- <th style="vertical-align: text-top; background-color: black; text-align: right;" id="ind-postests">n/a</th> -->
                         </tr>
                     </thead>
                     <tbody id="statesrows"></tbody>
