--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -143,7 +143,8 @@
               <div id="total-pos-tests-timelines"></div><br/>
               <div id="total-tests-timelines"></div><br/>
               <div id="timelines"></div><br/>
-              <div id="map"></div>
+              <div id="map"></div><br/>
+              <div id="bubbleplot"></div><br/>
             </div>
         </div>
         <div class="row">
@@ -226,6 +227,7 @@
     </div>
 
     <script src="js/indiamap.js"></script>
+    ,<script src="js/bubbleplot.js"></script>
     <script src="js/basics.js"></script>
     <script src="index.js"></script>
 </body>
