covid19: data update

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -143,7 +143,7 @@
               <div id="total-pos-tests-timelines"></div><br/>
               <div id="total-tests-timelines"></div><br/>
               <div id="timelines"></div><br/>
-              <div id="map"></div><br/>
+              <div id="map"></div><br/><hr style="border: 0.5px solid dimgray;"/>
               <div id="bubbleplot"></div><br/>
             </div>
         </div>
