covid19: data sources

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -110,7 +110,14 @@
         </div>
         <div class="row">
             <div class="col-md-6 table-responsive">
-                
+                <span style="font-size: xx-small">Data Sources</span><br/>
+
+                <ul style="font-size: xx-small">
+                  <li><a target="_blank" href="https://ourworldindata.org/grapher/covid-19-positive-rate-bar?tab=chart&time=2020-03-13..&country=~IND">"Our World in Data" project ... for India's Daily Test Positivity Rates</a></li>
+                  <li> <a target="_blank" href="https://api.covid19india.org">COVID19India's Data API ... for state-wise testing data</a></li>
+                  <li><a href="https://uidai.gov.in/images/state-wise-aadhaar-saturation.pdf">India's 2020 Population projects -- UDAI</a></li>
+                </ul>
+
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <colgroup>
                       <col span="1">
