--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -142,7 +142,7 @@
     <div class="container">
       <hr style="border: 0.5px solid dimgray;"/>
       <div class="row justify-content-center">
-        <div class="col-md-9">
+        <div class="col">
           <div id="bubbleplot"></div>
         </div>
       </div>
