--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -154,6 +154,12 @@
             <hr style="border: 0.5px solid dimgray;"/>
             <h3 id="notes">Pandemic Notes</h3>
 
+            <h5>July 6</h5>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/TelanganaCovidFailure?src=hash&amp;ref_src=twsrc%5Etfw">#TelanganaCovidFailure</a> is a lesson for everyone. Monitoring for spikes in general fever cases or pulmonary diseases, as a substitute for active infection testing, in the middle of an active pandemic can be disastrous. And frankly it an example of policy failure in public health.</p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1280320020975775744?ref_src=twsrc%5Etfw">July 7, 2020</a></blockquote>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/DelhiFightsCorona?src=hash&amp;ref_src=twsrc%5Etfw">#DelhiFightsCorona</a> and it is remarkable! Delhi has, for now, effectively bent the <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Test Positivity metric downwards. Not too long ago, test pos. was on its way to go beyond 18%. Today it sits at 15.34% and on its way down. Keep going <a href="https://twitter.com/ArvindKejriwal?ref_src=twsrc%5Etfw">@ArvindKejriwal</a> and team!!! <a href="https://t.co/xcBHsx4wcy">pic.twitter.com/xcBHsx4wcy</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1280316942482472960?ref_src=twsrc%5Etfw">July 7, 2020</a></blockquote>
+
             <h5>June 27</h5>
 
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">No. of positive cases &amp; tests conducted show <a href="https://twitter.com/hashtag/Bihar?src=hash&amp;ref_src=twsrc%5Etfw">#Bihar</a> really ramping up testing numbers to 181k to-date, while finding a little over 8.3k cases. Compare w. <a href="https://twitter.com/hashtag/Telangana?src=hash&amp;ref_src=twsrc%5Etfw">#Telangana</a>’s <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> cases: 11k cases - only slightly higher; but by running only ~70k tests(less than 40% of Bihar’s tests.) <a href="https://t.co/T41ABDurcl">pic.twitter.com/T41ABDurcl</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1276810959034564608?ref_src=twsrc%5Etfw">June 27, 2020</a></blockquote>
