covid19: scrollable tpr batches

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -120,7 +120,14 @@
       </ul>
       <div id="india-miniplot"></div>
 
-      <div id="miniplots"></div>
+      <div class="text-white bg-danger pl-2 font-weight-bold" style="font-size: smaller;">Test Positivity: Greater than 5.0% ...</div>
+      <div id="miniplots" style="overflow-x: scroll; white-space: nowrap;"></div>
+
+      <div class="text-body bg-warning pl-2 font-weight-bold" style="font-size: smaller;">Test Positivity: Between 5.0% and 2.0% ...</div>
+      <div id="miniplots2" style="overflow-x: scroll; white-space: nowrap;"></div>
+
+      <div class="text-white bg-success pl-2 font-weight-bold" style="font-size: smaller;">Test Positivity: Below 2.0% ...</div>
+      <div id="miniplots3" style="overflow-x: scroll; white-space: nowrap;"></div>
 
       <hr style="border: 0.5px solid dimgray;"/>
     </div>
