covid19: minor change in bubbles

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -87,26 +87,26 @@
 
     <div class="container-fluid">
         <div class="row">
-          <div class="col text-light">
-            <h4>
-              Test Positivity Rates across India's States and Union Territories 
+          <div class="col text-light" style="font-size: small;">
+            <h5>
+              Test Positivity Rates across India's States and Union Territories
+
               <a href="https://twitter.com/intent/tweet?button_hashtag=COVID19IndiaTesting&text=Check%20out%20Test%20Positivity%20Rates%20in%20India%20today%20at%20" class="twitter-hashtag-button" data-related="treestrokes" data-url="https://vijaykrishna.github.io/covid19-india-testing/">Tweet #COVID19IndiaTesting</a>
-            </h4>
+            </h5>
 
-              Test Positivity is a metric that is helpful in better estimating the true spread of an epidemic 
-              when we know that the number of reported cases for a disease is a undercount of the actual number of 
-              cases within a given population.<br/><br/>
+            Test Positivity is a metric that is helpful in better estimating the true spread of an epidemic 
+            when we know that the number of reported cases for a disease is a undercount of the actual number of 
+            cases within a given population.<br/><br/>
 
-              In addition, Test Positivity is also a useful metric to assess the effectivness of the testing approach
-              deployed to measure the spread of a certain epidemic.
+            In addition, Test Positivity is also a useful metric to assess the effectivness of the testing approach
+            deployed to measure the spread of a certain epidemic.
 
-              When viewed as a metric to assess the testing approach itself:
-              <ul>
-                <li>Lower rates suggests more a widespread, random, and proactive testing approach.</li>
-                <li>Higher rates suggests a more targetted, reactive testing approach.</li>
-              </ul>
+            When viewed as a metric to assess the testing approach itself:
+            <ul>
+              <li>Lower rates suggests more a widespread, random, and proactive testing approach.</li>
+              <li>Higher rates suggests a more targetted, reactive testing approach.</li>
+            </ul>
           </div>
-          
         </div>
     </div>
 
